<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sap.dsl</groupId>
	<artifactId>root</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>DSLEngineering</module>
		<module>EMFEnhancements</module>
		<module>ngpm</module>
	</modules>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<build>
		<directory>bin</directory>
		<outputDirectory>bin</outputDirectory>
		<testOutputDirectory>bin</testOutputDirectory>


		<pluginManagement>
			<plugins>
				<plugin>
					<inherited>true</inherited>
					<groupId>org.sonatype.tycho</groupId>
					<artifactId>maven-osgi-test-plugin</artifactId>
					<version>0.11.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.6</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>0.11.0</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>0.11.0</version>
				<configuration>
					<resolver>p2</resolver>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-test-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1024m -XX:PermSize=256m -XX:-UseGCOverheadLimit -XX:+UseParallelGC</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<excludes>
						<exclude>**/FractionPerformanceTest.java</exclude>
						<exclude>**/*$*</exclude> <!-- Exclude inner classes -->
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-compiler-plugin</artifactId>
				<version>0.11.0</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<!--<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.3.3</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<onlyAnalyze>com.sap.-,de.hpi.-</onlyAnalyze>
				</configuration>
			  	<executions>
					<execution><goals><goal>findbugs</goal></goals></execution>
				</executions>  
			</plugin>-->
		</plugins>
	</build>

	<repositories>
		<repository>
			<layout>p2</layout>
			<id>eclipse-indigo</id>
			<url>http://download.eclipse.org/releases/indigo/</url>
		</repository>
		<repository>
			<layout>p2</layout>
			<id>query2-nightly</id>
			<url>http://hudson.eclipse.org/hudson/job/tycho-query2-nightly/lastSuccessfulBuild/artifact/targetPlatform/</url>
		</repository>
	</repositories>

</project>

